# console-turn-based-combat

./: .gitignore  CMakeLists.txt  CONSOLE GAME – Turn-Based Combat (v1).cpp  CONSOLE GAME – Turn-Based Combat (v1).sln  CONSOLE GAME – Turn-Based Combat (v1).vcxproj  CONSOLE GAME – Turn-Based Combat (v1).vcxproj.filters  README.md  combat.cpp  combat.h  enemy.cpp  enemy.h  firstCombat.cpp  firstCombat.h  getName.cpp  getName.h  globals.h  player.cpp  player.h  secondCombat.cpp  secondCombat.h  showIntro.cpp  showIntro.h  thirdCombat.cpp  typeText.cpp  typeText.h
include/: combat.h  firstCombat.h  thirdCombat.h
src/: combat.cpp  consoleUtils.cpp  enemy.cpp  firstCombat.cpp  getName.cpp  main.cpp  player.cpp  secondCombat.cpp  showIntro.cpp  thirdCombat.cpp  typeText.cpp
